--- a/prada/style.css
+++ b/prada/style.css
@@ -1,7 +1,6 @@
 
-  <style>
   @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@400;500&display=swap');
-  </style>
+
 
 *{
     margin: 0;
@@ -12,9 +11,9 @@
 
 body {
     background-color: rgb(255, 255, 255);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-    font-size: 1rem;
-    font-weight: 10 px
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 10px;
+    font-size: 20px;
 }
 
 
@@ -68,4 +67,22 @@ header input {
 }
 .align-center {
     align-items: center;
+}
+
+.videoframe {
+    overflow: hidden;
+    margin-bottom: 1rem;
+    max-height: 100vh;
+}
+
+video {
+    width: 100%;
+}
+
+img {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+main{
+    padding: 10pt;
 }
