--- a/prada/style.css
+++ b/prada/style.css
@@ -14,6 +14,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 10px;
     font-size: 20px;
+    color: black;
 }
 
 
@@ -61,9 +62,10 @@ header input {
 
 /* vormgeving classes */
 
-.flex-container {
+.flex-container{
     display: flex;
     justify-content: space-between;
+    gap: 2rem;
 }
 .align-center {
     align-items: center;
@@ -75,20 +77,41 @@ header input {
     max-height: 100vh;
 }
 
+
+main i {
+  color: white;
+}
+
+span {
+  color: white;
+}
+
+figure {
+  position: relative;
+}
+
 figcaption {
     position: absolute;
     color: white;
     z-index: 1;
-margin-top: -20x;
+}
+
+.flex-container figcaption {
+  bottom: 90%;
+}
+
+button {
+ border-radius: 100px;
+ align-content: center;
+ padding: 5px 10px;
+ border-style: hidden;
+ background-color: rgb(0, 0, 0);
+ font-size: 20px;
+ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 video {
     width: 100%;
-}
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
 }
 
 .flex-item {
@@ -99,7 +122,7 @@ img {
     margin-bottom: 1rem;
 }
 main{
-    padding: 10pt;
+    padding: 10px;
 }
 footer {
     background-color: #0F1111;
@@ -175,4 +198,5 @@ footer {
     margin: 0 auto;
     text-align: center;
     margin:auto;
+    padding-top: 10px;
   }
