--- a/label/style.css
+++ b/label/style.css
@@ -176,4 +176,55 @@ p {
   #Artiest .icons i {
     font-size: 20px;
   }
+  header input#burger {
+    display: none;
+}
+
+header label[for="burger"] {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    right: 0;
+    display: none;
+    width: 100%;
+    padding: 1rem 1ch;
+    text-align: right;
+    cursor: pointer;
+}
+
+header label[for="burger"] i {
+    margin: 0;
+    font-size: 1.25rem;
+}
+
+@media (width <=750px) {
+    header label[for="burger"] {
+        display: block;
+    }
+    #lineup .grid-container{
+        grid-template-columns: repeat(1,9fr);
+    }
+    
+    #Artiest .grid-container{
+        grid-template-columns: repeat(1,9fr);
+    }
+
+    header nav ul {
+        position: fixed;
+        z-index: 3;
+        top: 3rem;
+        right: 0;
+display: none;
+        padding-right: 1;
+        width: 20%;
+        background-color: none;
+        text-align: right;
+        user-select: none;
+    }
+
+    header input#burger:checked+label[for="burger"]+nav ul {
+        display: flex;
+        flex-direction: column;
+    }
+}
   
